--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/styled-components": "^4.1.8",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0",
+    "styled-components": "^4.1.3",
     "typescript": "3.3.1"
   },
   "scripts": {
