--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/react-redux": "^7.0.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools": "^3.0.45",
+    "@types/redux-devtools-dock-monitor": "^1.1.33",
+    "@types/redux-devtools-log-monitor": "^1.0.34",
     "@types/styled-components": "^4.1.8",
     "react": "^16.8.1",
+    "react-devtools": "^3.6.0",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
