--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
@@ -13,6 +14,8 @@
     "@types/redux-devtools-dock-monitor": "^1.1.33",
     "@types/redux-devtools-log-monitor": "^1.0.34",
     "@types/styled-components": "^4.1.8",
+    "concurrently": "^4.1.0",
+    "express": "^4.16.4",
     "react": "^16.8.1",
     "react-devtools": "^3.6.0",
     "react-dom": "^16.8.1",
@@ -26,13 +29,16 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
     "styled-components": "^4.1.3",
-    "typescript": "3.3.1"
+    "typescript": "3.3.1",
+    "yarn-run-all": "^3.1.1"
   },
   "scripts": {
+    "server": "node server/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "startall": "concurrently \"yarn server\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": "react-app"
