--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-devtools-log-monitor": "^1.0.34",
     "@types/styled-components": "^4.1.8",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "react": "^16.8.1",
     "react-devtools": "^3.6.0",
