--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.0",
     "@types/react-redux": "^7.0.1",
     "@types/redux": "^3.6.0",
+    "@types/redux-debounced": "^0.2.19",
     "@types/redux-devtools": "^3.0.45",
     "@types/redux-devtools-dock-monitor": "^1.1.33",
     "@types/redux-devtools-log-monitor": "^1.0.34",
@@ -23,6 +24,7 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-debounced": "^0.5.0",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
