--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme": "^3.1.17",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/express": "^4.16.1",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/react-redux": "^7.0.1",
+    "@types/react-test-renderer": "^16.8.0",
     "@types/react-transition-group": "^2.0.15",
     "@types/redux": "^3.6.0",
     "@types/redux-debounced": "^0.2.19",
@@ -18,12 +21,15 @@
     "@types/styled-components": "^4.1.8",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "express": "^4.16.4",
     "react": "^16.8.1",
     "react-devtools": "^3.6.0",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.8.1",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
     "redux-devtools": "^3.5.0",
