--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/chai-enzyme": "^0.6.5",
     "@types/enzyme": "^3.1.17",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/express": "^4.16.1",
@@ -19,6 +21,8 @@
     "@types/redux-devtools-dock-monitor": "^1.1.33",
     "@types/redux-devtools-log-monitor": "^1.0.34",
     "@types/styled-components": "^4.1.8",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "enzyme": "^3.8.0",
