--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/enzyme": "^3.1.17",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/express": "^4.16.1",
+    "@types/fetch-mock": "^7.2.2",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.21",
     "@types/react": "16.8.2",
@@ -20,6 +21,7 @@
     "@types/redux-devtools": "^3.0.45",
     "@types/redux-devtools-dock-monitor": "^1.1.33",
     "@types/redux-devtools-log-monitor": "^1.0.34",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/styled-components": "^4.1.8",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
@@ -28,6 +30,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "express": "^4.16.4",
+    "fetch-mock": "^7.3.0",
     "react": "^16.8.1",
     "react-devtools": "^3.6.0",
     "react-dom": "^16.8.1",
@@ -39,6 +42,7 @@
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
