--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "express": "^4.16.4",
     "fetch-mock": "^7.3.0",
+    "jest-dom": "^3.1.1",
     "react": "^16.8.1",
     "react-devtools": "^3.6.0",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "react-test-renderer": "^16.8.1",
+    "react-testing-library": "^5.8.0",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
     "redux-devtools": "^3.5.0",
